# statlume-api

./: .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  manage.py  poetry.toml  pyproject.toml  stub.json
com/api_sports/football/: cli.py  requests.py
com/api_sports/football/stats/: cli.py
com/dataclasses/: mixins.py
com/glootie/: cli.py
com/glootie/subcommands/: get.py
com/http/: requests.py
com/statlume/: settings.py  urls.py  wsgi.py
com/statlume/database/: Database.py
com/statlume/mlb/: cli.py
com/statlume/mlb/subcommands/: delete.py
com/statlume/nba/: X Posts.txt  cli.py  database.py  datasheets.py  games.txt  lineups.py  logs.py  schedule.py  update.py
com/statlume/nba/datasheets/: cli.py  mismatch.py  threes.py
com/statlume/nba/models/: points.py  rebounds.py
com/statlume/nba/odds/: models.py  odds.py
com/statlume/nba/sheets/: DAL@PHI-players-02-05-2024.xlsx  DAL@PHI-teams-02-05-2024.xlsx  GSW@BKN-players-02-05-2024.xlsx  GSW@BKN-teams-02-05-2024.xlsx  LAC@ATL-players-02-05-2024.xlsx  LAC@ATL-teams-02-05-2024.xlsx  LAL@CHA-players-02-05-2024.xlsx  LAL@CHA-teams-02-05-2024.xlsx  SAC@CLE-players-02-05-2024.xlsx  SAC@CLE-teams-02-05-2024.xlsx  TOR@NOP-players-02-05-2024.xlsx  TOR@NOP-teams-02-05-2024.xlsx  mismatch.xlsx  threes.xlsx
com/statlume/nba/sql/: createTables.sql  dropTables.sql
com/statlume/nba/subcommands/: create.py  delete.py
com/statlume/nfl/: cli.py  cluster.py  update.py
com/statlume/nfl/subcommands/: create.py  create.py.isorted
com/statlume/odds/: odds.py
statlume/: asgi.py  urls.py
statlume/database/: Database.py
statlume/player/: Player.py
