[tool.poetry]
name = "com-statlume"
version = "0.1.0"
description = "com.statlume"
authors = ["Isaac <isaacfrett2@gmail.com>"]
readme = "README.md"
packages = [
    {include = "com"},
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
chardet = "^5.2.0"
bs4 = "^0.0.2"
mysql = "^0.0.3"
pandas = "^2.2.0"
sqlalchemy = "^2.0.25"
mysql-connector-python = "^8.3.0"
excel2img = "^1.4.0"
openpyxl = "^3.1.2"
scikit-learn = "^1.4.0"
pyarrow = "^14.0.2"
nba-api = "^1.4.1"
django-ninja = "^1.1.0"

[tool.poetry.group.editor.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"
pyright = "^1.1.347"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90

[tool.pyright]
strict = ["com"]


[tool.poetry.scripts]
nba = "com.statlume.nba.cli:app"
nfl = "com.statlume.nfl.cli:app"
mlb = "com.statlume.mlb.cli:app"